# IuhEcommerce

./: .env  .gitignore  KLTN.code-workspace  alembic.ini  app.py  app_environment.py  clean_migrations.sql  db.py  docker-compose.yml  docs.md  drop_alembic_version.bat  env.py  import_collection.py  init.sql  kafka_to_qdrant.py  main.py  note.txt  pyproject.toml  qdrant_data.json  read.py  readme.md  reset_alembic.py  reset_alembic.sql  security.py  test.ipynb  test.py  test_compare  update_alembic_version.py
agent/: parsing_agent.py
alemnbic/: env.py
controllers/: auths.py  buildAgent.md  cart_items.py  chat.py  customers.py  discounts.py  faq_loader.py  fqas.py  manager.py  message.py  orchestrator_agent.py  orders.py  polici_agent.py  product_comparison_agent.py  product_discounts.py  product_info_agent.py  products.py  qdrant_agent.py  recommendation_agent.py  review_agent.py  reviews.py  search.py  search_discovery_agent.py  shopping_carts.py  shops.py  synthetic.py  test agent  test.ipynb  user_profile_agent.py  web_search_agent.py
crawl datas/: crawl_image.py  crawl_products.py  crawl_reviews.py  crawl_tiki.py  docker-compose.yml  import_pdf_minio.py  merge_data.py  save_to_mongodb.py
crawl_datas/: crawl_image.py  crawl_tiki.py
embedding/: Untitled.ipynb  chatbot.py  check_qd.py  delete_qd.py  des.py  generate_embeddings.py  main.py  poli.py  process.py  recommendation.py  run_embedding.py
import_data/: create.py  pre.ipynb  pre.py  pre_product.py  tools.py
models/: __init__.py  analytics.py  base.py  brand_encoder.pkl  brands.py  buy_history.py  (+55 more)
(+993 files in other folders)
