[tool.poetry]
name = "Chatbot"
version = "0.1.0"
description = ""
authors = ["Truong Thanh Huong <huongakwy>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = {extras = ["all"], version = "^0.115.12"}
alembic = "^1.15.2"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
psycopg2 = "^2.9.10"
google-api-python-client = "^2.123.0"
gdown = "^4.7.1"
autogen = "^0.9"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.40"
unidecode = "^1.4.0"
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
numpy = "^2.2.5"
openai = "^1.78.0"
qdrant-client = "^1.14.2"
google-genai = "^1.14.0"
pandas = "^2.2.3"
langchain = "^0.3.25"
pypdf2 = "^3.0.1"
json5 = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

